Added FavoriteList activity and adapter for working with database. Changed adapter of SearchActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="name_of_book_value">Название книги</string>
     <string name="author_of_book_value">Автор книги</string>
     <string name="description">Краткое описание:</string>
-    <string name="text_of_description">The impact of the search dialog on your activity lifecycle The impact of the search dialog on your activity
+    <string name="text_of_descr">The impact of the search dialog on your activity lifecycle The impact of the search dialog on your activity
         The impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your acti
 
         lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycle</string>
@@ -22,5 +22,6 @@
     <string name="text_language_value">русский</string>
     <string name="title_activity_test_api">TestAPIActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_favorite_list">Избранные</string>
 
 </resources>
