--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,14 @@
     <string name="app_name">Книжный магазин</string>
     <string name="action_settings">Settings</string>
     <string name="search_hint">Поиск</string>
-    <string name="text">пушкин</string>
+    <string name="text">Введите автора</string>
     <string name="add">Поиск</string>
     <string name="no_records">Соответствий не найдено</string>
     <string name="title_activity_full_info">Книга</string>
     <string name="name_of_book_value">Название книги</string>
     <string name="author_of_book_value">Автор книги</string>
     <string name="description">Краткое описание:</string>
-    <string name="text_of_descr">The impact of the search dialog on your activity lifecycle The impact of the search dialog on your activity
+    <string name="text_sample_descr">The impact of the search dialog on your activity lifecycle The impact of the search dialog on your activity
         The impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your actiThe impact of the search dialog on your activity lifecycle The impact of the search dialog on your acti
 
         lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycleThe impact of the search dialog on your activity lifecycle</string>
