Attempt to do strike style for price(doesn't work)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="title_activity_favorite_list">Избранные</string>
     <string name="cost">Цена:</string>
     <string name="cost_value">133 руб.</string>
+    <string name="strike_style"><strike> %s</strike></string>
 
 </resources>
