--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">BookStore</string>
-    <string name="action_settings">Settings</string>
-    <string name="search_hint">Поиск</string>
+    <string name="action_settings">Настройки</string>
+    <string name="action_search">Поиск</string>
     <string name="text">Введите автора</string>
     <string name="add">Поиск</string>
     <string name="no_records">Соответствий не найдено</string>
@@ -26,5 +26,6 @@
     <string name="cost">Цена:</string>
     <string name="cost_value">133 руб.</string>
     <string name="strike_style"><strike> %s</strike></string>
+    <string name="action_favorites">Избранные</string>
 
 </resources>
